# codesearch

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.claude/: launch.json
.claude/skills/codesearch/: SKILL.md  install.sh
.claude/skills/codesearch-cli/: SKILL.md  install.sh
.claude/skills/codesearch-mcp/: SKILL.md
.github/workflows/: release.yml  rust.yml
docs/: README.md  management-api.openapi.json
docs/architecture/: overview.md
docs/features/: architecture-analysis.md  call-graph.md  cross-service-channels.md  editor-integrations.md  embedding-backends.md  getting-started.md  indexing.md  memory.md  roadmap.md  search.md  serve-and-management-api.md
docs/plans/: 2026-03-10-context-command-revamp-design.md  2026-03-10-context-command-revamp.md  2026-03-11-tui-context-mode-design.md  2026-03-11-tui-context-mode-plan.md  2026-07-21-memory-claim-graph-design.md  execution-flows-communities-mcp.md
evals/: README.md  skill-evals.jsonl
ide/fzf/: ag-fzf.sh  codesearch-fzf.sh  setup.sh
ide/tv/: cable.toml
ide/tv/cable/: codesearch.toml
ide/zed/: keybindings.json  settings.json  setup.sh  tasks.json
ide/zed/extension/: Cargo.toml  extension.toml
ide/zed/extension/src/: lib.rs
nvim/lua/telescope/_extensions/: codesearch.lua
src/: lib.rs  main.rs
src/agent/: mod.rs  pi.rs  pre_tool_call.rs
src/agent/install/: mod.rs  zed.rs
src/application/: git_remote.rs  mod.rs
src/application/interfaces/: analysis_repository.rs  call_graph_repository.rs  channel_endpoint_repository.rs  channel_extractor.rs  channel_resolver.rs  chat_client.rs  claim_repository.rs  embedding_service.rs  file_hash_repository.rs  memory_repository.rs  metadata_repository.rs  mod.rs  parser_service.rs  query_expander.rs  repository_repository.rs  reranking_service.rs  session_discovery.rs  vector_repository.rs
src/application/use_cases/: call_graph.rs  channel_link.rs  claim_dream.rs  claim_dream_prompt.rs  claim_ingestion.rs  claim_ingestion_prompt.rs  claim_recall.rs  cluster_detection.rs  community_naming.rs  coupling_detection.rs  delete_repository.rs  execution_features.rs  execution_features_naming.rs  explain.rs  file_relationship.rs  graph_expansion.rs  impact_analysis.rs  import_session.rs  index_repository.rs  list_repositories.rs  memory_browse.rs  memory_dream.rs  memory_dream_prompt.rs  memory_extraction.rs  memory_extraction_prompt.rs  memory_search.rs  memory_summary.rs  memory_support.rs  mod.rs  pattern_utils.rs  repository_overview.rs  resolve_channels.rs  rrf_fuse.rs  search_code.rs  snippet_lookup.rs  split_analysis.rs  symbol_cluster_detection.rs  symbol_context.rs  visualize_graph.rs
src/cli/: mod.rs
src/connector/: mod.rs
src/connector/adapter/: anthropic_client.rs  anthropic_reranking.rs  candle_embedding.rs  candle_reranking.rs  chat_client.rs  chroma_vector_repository.rs  claude_transcript.rs  codesearch_config.rs  copilot_auth.rs  copilot_chat_client.rs  duckdb_analysis_repository.rs  duckdb_call_graph_repository.rs  duckdb_channel_endpoint_repository.rs  duckdb_claim_repository.rs  duckdb_file_hash_repository.rs  duckdb_memory_repository.rs  duckdb_metadata_repository.rs  duckdb_vector_repository.rs  in_memory_vector_repository.rs  lancedb_vector_repository.rs  llm_query_expander.rs  lm_studio_embedding.rs  lm_studio_reranking.rs  mock_embedding.rs  mock_reranking.rs  mod.rs  no_embedding.rs  openai_chat_client.rs  openai_embedding.rs  openai_reranking.rs  ort_embedding.rs  ort_reranking.rs  parser_based_extractor.rs  resource_fetch.rs  rule_based_query_expander.rs  sqlite_repository_adapter.rs  treesitter_parser.rs
src/connector/adapter/management/: copilot_login.rs  dream.rs  error.rs  (+4 more)
src/connector/api/: container.rs  copilot_command.rs  mod.rs  openai_command.rs  repo_resolver.rs  router.rs
src/connector/embedding/: mock_service.rs  mod.rs  ort_service.rs
src/connector/parser/: mod.rs  treesitter_parser.rs
src/connector/storage/: chroma.rs  memory.rs  mod.rs  sqlite.rs
src/domain/: error.rs  mod.rs
src/domain/models/: channel_endpoint.rs  cluster.rs  code_chunk.rs  coupling.rs  discovered_session.rs  embedding.rs  execution_feature.rs  file_graph.rs  file_hash.rs  graph_view.rs  language.rs  memory.rs  memory_claim.rs  mod.rs  repository.rs  search_result.rs  split_analysis.rs  symbol_reference.rs
src/domain/repositories/: chunk_repository.rs  embedding_repository.rs  mod.rs  repository_repository.rs  vector_repository.rs
src/domain/services/: embedding_service.rs  error.rs  mod.rs  parser_service.rs
src/tui/: app.rs  cache.rs  event.rs  import_picker.rs  mod.rs  state.rs
src/tui/views/: context.rs  format.rs  impact.rs  memory.rs  mod.rs  search.rs
src/tui/widgets/: code_panel.rs  flame_graph.rs  input_bar.rs  markdown.rs  mod.rs  result_list.rs  syntax.rs
tests/: agent_install_tests.rs  channel_link_tests.rs  channel_resolution_tests.rs  claim_dream_tests.rs  claim_ingestion_tests.rs  claim_recall_tests.rs  community_naming_tests.rs  coupling_tests.rs  duckdb_analysis_repository_tests.rs  duckdb_claim_repository_tests.rs  duckdb_metadata_repository_tests.rs  duckdb_vector_repository_tests.rs  execution_features_tests.rs  integration_tests.rs  management_server_tests.rs  memory_tests.rs  namespace_cluster_tests.rs  namespace_symbol_cluster_tests.rs  repo_resolver_tests.rs  repository_overview_tests.rs  symbol_context_tests.rs  visualize_tests.rs
tests/fixtures/: sample_cpp.cpp  sample_javascript.js  sample_kotlin.kt  sample_middleware.js  sample_python.py  sample_router.js  sample_rust.rs  sample_swift.swift
(+78 files in other folders)
