[package]
name = "codesearch"
version = "0.3.0"
edition = "2021"
authors = ["CodeSearch Team"]
license = "MIT"
description = "Semantic code search powered by embeddings"
repository = "https://github.com/ArtemisMucaj/codesearch"

[[bin]]
name = "codesearch"
path = "src/main.rs"

[lib]
name = "codesearch"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
duckdb = { version = "1.4", features = ["bundled"] }

# Vector database (optional, for ChromaDB backend)
chromadb = "2.3"

# Tree-sitter for AST parsing
tree-sitter = "0.26.3"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-javascript = "*"
tree-sitter-typescript = "*"
tree-sitter-go = "*"
tree-sitter-hcl = "*"
tree-sitter-php = "*"
streaming-iterator = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# File system utilities
walkdir = "2.4"
ignore = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation (for mock embeddings)
rand = "0.8"

# Cryptographic hashing (for incremental indexing)
sha2 = "0.10"

# Embeddings (ONNX Runtime + HuggingFace tokenizers)
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
tokenizers = "0.21"
hf-hub = "0.4"
ndarray = "0.16"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
