[package]
name = "codesearch-zed"
version = "0.1.0"
edition = "2021"

[lib]
# Zed extensions are compiled to WebAssembly (wasm32-wasi target).
# Build with: cargo build --release --target wasm32-wasi
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
